Weighted Normal modifier's keep sharp option causes broken normals #107514

Closed
opened 2023-05-01 21:28:25 +02:00 by kursad k · 4 comments
Member

System Information
Operating system: Windows 11
Graphics card: RTX 2070

Blender Version
Broken: 358ce4f52b
Worked: 3.5.1 e1ccd9d4a1

Short description of error
blender_Fq7UV0AR3u.jpg

Exact steps for others to reproduce the error

  • Load the attached attached .blend

  • Enable and disable the keep sharp option of the modifier

**System Information** Operating system: Windows 11 Graphics card: RTX 2070 **Blender Version** Broken: 358ce4f52b58 Worked: 3.5.1 e1ccd9d4a1d3 **Short description of error** ![blender_Fq7UV0AR3u.jpg](/attachments/9c864ef1-1c4a-4226-9183-8b45ce6fb169) **Exact steps for others to reproduce the error** - Load the attached attached .blend - Enable and disable the keep sharp option of the modifier
kursad k added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-01 21:28:26 +02:00
Member

3.5.1 e1ccd9d4a1 seems working normally, will test later builds.

3.5.1 e1ccd9d4a1 seems working normally, will test later builds.
Member

Can confirm, will bisect. Set high priority due to recent regression

Can confirm, will bisect. Set high priority due to recent regression
YimingWu added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-02 08:54:08 +02:00
YimingWu added
Priority
High
and removed
Priority
Normal
labels 2023-05-02 08:57:55 +02:00
Member

caused by 9292e094e7

cc @HooglyBoogly

caused by 9292e094e7737dc2b63ef44d0bee76babae45ab3 cc @HooglyBoogly
Hans Goudey self-assigned this 2023-05-02 14:24:32 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-05-02 14:24:37 +02:00
Member

Thanks for the report and for bisecting!

Thanks for the report and for bisecting!
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-02 23:08:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107514
No description provided.