Fix #107514: Broken normals wtih weighted normal "keep sharp" option

The data indices for all loops in a fan weren't set, only the first.